// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Column renders correctly 1`] = `
.c0 {
  grid-column: 1 / -1;
  width: 100%;
}

<div
  class="c0"
>
  Column
</div>
`;

exports[`Column with "fullsize" renders correctly 1`] = `
.c0 {
  grid-column: 1 / -1;
  width: 100%;
}

<div
  class="c0"
>
  Column
</div>
`;

exports[`Column with "narrow" renders correctly 1`] = `
.c0 {
  grid-column: 2 / -2;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    grid-column: 6 / -6;
  }
}

@media (min-width:1200px) {
  .c0 {
    grid-column: 7 / -7;
  }
}

<div
  class="c0"
>
  Column
</div>
`;

exports[`Column with "regular" renders correctly 1`] = `
.c0 {
  grid-column: 2 / -2;
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    grid-column: 3 / -3;
  }
}

<div
  class="c0"
>
  Column
</div>
`;
